length 2 -> 4 escape . in path entry tooltip overall cleanup

--- a/src/main/resources/assets/itemmarks/lang/en_US.lang
+++ b/src/main/resources/assets/itemmarks/lang/en_US.lang
@@ -73,6 +73,7 @@ itemmarks.config.on=ON
 itemmarks.config.off=OFF
 itemmarks.config.position=Mark Position:
 itemmarks.config.scale=Mark Scale:
+itemmarks.config.adaptive=Adaptive Size:
 itemmarks.config.close=Close
 
 # Position Names
